Remove unused classes, simplify utility methods, and replace string literals with enums for SHL modes and status. Add environment-driven settings for GraphQL complexity/depth and refactor SHLink generation with Jackson.